--- a/index.html
+++ b/index.html
@@ -908,7 +908,7 @@
 		crossorigin="anonymous"
 		></script>
 		<script src="./fullpage.min.js"></script>
-		<script src="app.js"></script>
+		<script src="./app.js"></script>
 
 	</body>
 </html>
