--- a/index.html
+++ b/index.html
@@ -266,9 +266,9 @@
 					<p>
 						<span class="com">01</span> <span class="type">void</span> <span class="func">worldUpdated16x2</span>() {
 						<span class="com">02</span>
-						<span class="com">03</span> &nbsp;&nbsp;&nbsp;&nbsp;<span class="op">for</span>(<span class="type">int</span> i <span class="type">int</span> <span class="type">int</span>; i <span class="logic"><</span> <span class="value">2</span>; i<span class="logic">++</span>) {
+						<span class="com">03</span> &nbsp;&nbsp;&nbsp;&nbsp;<span class="op">for</span>(<span class="type">int</span> i <span class="logic">=</span> <span class="value">0</span>; i <span class="logic"><</span> <span class="value">2</span>; i<span class="logic">++</span>) {
 						<span class="com">04</span>
-						<span class="com">05</span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="op">for</span>(<span class="type">int</span> j <span class="type">int</span> <span class="type">int</span>; j <span class="logic"><</span> <span class="value">16</span>; j<span class="logic">++</span>) {
+						<span class="com">05</span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="op">for</span>(<span class="type">int</span> j <span class="logic">=</span> <span class="value">0</span>; j <span class="logic"><</span> <span class="value">16</span>; j<span class="logic">++</span>) {
 						<span class="com">06</span>
 						<span class="com">07</span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="op">if</span>(world16x2_lastUpdate[i][j] <span class="logic">!=</span> world16x2[i][j]) {
 						<span class="com">08</span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="op">return</span> <span class="value">true</span>; <span class="com">//World updated</span>
