--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 		<div id="fullpage">
 
+			<!--Start-->
 			<section class="section start">
 
 				<h1>
@@ -25,7 +26,8 @@
 				</h2>
 
 			</section>
-			<section class="section s2">
+			<!--Gliederung-->
+			<section class="section s1">
 
 				<h1>
 					Gliederung
@@ -67,7 +69,8 @@
 				</div>
 
 			</section>
-			<section class="section s3">
+			<!--Binäres Lampen Display-->
+			<section class="section s2">
 
 				<h1>
 					Binäres Lampen Display
@@ -91,7 +94,8 @@
 				</div>
 
 			</section>
-			<section class="section s5">
+			<!--Hardware und Aufbau-->
+			<section class="section s3">
 
 				<h1>
 					Hardware und Aufbau
@@ -134,7 +138,8 @@
 				</div>
 
 			</section>
-			<section class="section s6">
+			<!--Der Algorithmus-->
+			<section class="section s4">
 
 				<h1>
 					Der Algorithmus
@@ -162,7 +167,8 @@
 				</div>
 
 			</section>
-			<section class="section s7">
+			<!--Arduino Spielekonsole-->
+			<section class="section s5">
 
 				<h1>
 					Arduino Spielekonsole
@@ -185,7 +191,8 @@
 				</div>
 
 			</section>
-			<section class="section s8">
+			<!--Hardware und Aufbau-->
+			<section class="section s6">
 
 				<h1>
 					Hardware und Aufbau
@@ -256,7 +263,8 @@
 				</div>
 
 			</section>
-			<section class="section s9">
+			<!--Konzept "last"-->
+			<section class="section s7">
 
 				<h1>
 					Konzept "last"
@@ -284,7 +292,8 @@
 				</div>
 
 			</section>
-			<section class="section s10">
+			<!--Joysticks-->
+			<section class="section s8">
 
 				<h1>
 					Joysticks
@@ -312,7 +321,8 @@
 				</div>
 
 			</section>
-			<section class="section s11">
+			<!--Joysticks-->
+			<section class="section s9">
 
 				<h1>
 					Joysticks
@@ -340,7 +350,8 @@
 				</div>
 
 			</section>
-			<section class="section s12">
+			<!--Joysticks-->
+			<section class="section s10">
 
 				<h1>
 					Joysticks
@@ -368,7 +379,8 @@
 				</div>
 
 			</section>
-			<section class="section s13">
+			<!--Welt-->
+			<section class="section s11">
 
 				<h1>
 					Welt
@@ -396,7 +408,8 @@
 				</div>
 
 			</section>
-			<section class="section s14">
+			<!--Welt-->
+			<section class="section s12">
 
 				<h1>
 					Welt
@@ -424,7 +437,8 @@
 				</div>
 
 			</section>
-			<section class="section s15">
+			<!--Menü-->
+			<section class="section s13">
 
 				<h1>
 					Menü
@@ -452,7 +466,8 @@
 				</div>
 
 			</section>
-			<section class="section s16">
+			<!--Menü-->
+			<section class="section s14">
 
 				<h1>
 					Menü
@@ -480,7 +495,8 @@
 				</div>
 
 			</section>
-			<section class="section s17">
+			<!--Start und Ende-->
+			<section class="section s15">
 
 				<h1>
 					Start und Ende
@@ -508,7 +524,8 @@
 				</div>
 
 			</section>
-			<section class="section s18">
+			<!--Start und Ende-->
+			<section class="section s16">
 
 				<h1>
 					Start und Ende
@@ -537,7 +554,8 @@
 
 
 			</section>
-			<section class="section s19">
+			<!--Start und Ende-->
+			<section class="section s17">
 
 				<h1>
 					Start und Ende
@@ -565,7 +583,8 @@
 				</div>
 
 			</section>
-			<section class="section s20">
+			<!--Eigende Charaktere-->
+			<section class="section s18">
 
 				<h1>
 					Eigende Charaktere
@@ -743,7 +762,8 @@
 				</div>
 
 			</section>
-			<section class="section s21">
+			<!--Beispiel Spiel "Catch"-->
+			<section class="section s19">
 
 				<h1>
 					Beispiel Spiel "Catch"
@@ -771,7 +791,8 @@
 				</div>
 
 			</section>
-			<section class="section s22">
+			<!--Beispiel Spiel "Catch"-->
+			<section class="section s20">
 
 				<h1>
 					Beispiel Spiel "Catch"
@@ -799,7 +820,8 @@
 				</div>
 
 			</section>
-			<section class="section s23">
+			<!--Beispiel Spiel "Catch"-->
+			<section class="section s21">
 
 				<h1>
 					Beispiel Spiel "Catch"
@@ -827,7 +849,8 @@
 				</div>
 
 			</section>
-			<section class="section s24">
+			<!--Beispiel Spiel "Catch"-->
+			<section class="section s22">
 
 				<h1>
 					Beispiel Spiel "Catch"
@@ -855,7 +878,8 @@
 				</div>
 
 			</section>
-			<section class="section s25">
+			<!--Beispiel Spiel "Catch"-->
+			<section class="section s23">
 
 				<h1>
 					Beispiel Spiel "Catch"
@@ -883,6 +907,7 @@
 				</div>
 
 			</section>
+			<!--Ende-->
 			<section class="section end">
 
 				<h1>
