--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 							<li>&#9744; 4x grüne Lampen</li>
 							<li>&#9744; 1x Infrarot-Empfänger</li>
 							<li>&#9744; 1x Infrarot-Fernbedienung</li>
-							<li>&#9744; 4x 220Ω Wiederstände</li>
+							<li>&#9744; 4x 220Ω Widerstände</li>
 							<li>&#9744; 6x Kabel</li>
 
 						</ul>
